# riotsensors-example

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c  prebuild.sh
tests/: test_list.sh
